# reface

./: Cargo.toml  README.md
http/: api_examples.http
scripts/: README_FINAL.md  export_torchscript.py  model_architecture.py  requirements.txt  test_model.py  test_soft.py  train_ffhq_soft.py  train_model.py
src/: main.rs  model.rs
training/: TRAINING_REPORT.md  result_training.md
