[package]
name = "reface-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
actix-multipart = "0.7.2"
tch = "0.22.0"
image = "0.25.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#base64 = "0.22"
#tokio = { version = "1.48.0", features = ["full"] }
futures-util = "0.3"
env_logger = "0.11"
log = "0.4"
anyhow = "1.0"
#thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1